--- a/Website/Sundown/style.css
+++ b/Website/Sundown/style.css
@@ -25,6 +25,11 @@ html,body{
     height: 100%;
     width: 100%;
 }
+#main{
+    /* background-color: #0b0500; */
+    position: relative;
+    z-index: 10;
+}
 .page1{
     padding: 2em 2em 2em 2em;
     min-height: 100vh;
@@ -244,4 +249,160 @@ nav ul li:hover a{
     to {
         transform: translateX(-100%);
     }
+}
+.page2-extend{
+    height: 80vh;
+    width: 100%;
+    /* background-color: antiquewhite; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4vw;
+    position: relative;
+    z-index: 9;
+}
+.page2-extend h2{
+    font-size: 3.5vw;
+    width: 50%;
+    line-height: 4vw;
+}
+.image-tile{
+    width: 20%;
+}
+.image-tile img{
+    width: 100%;
+    border-radius: 10px;
+}
+.image-tile p{
+    font-family: neu;
+    font-weight: 200;
+    font-size: 1vw;
+    margin-top: 2vw;
+}
+.page2 .red-circle-shape2{
+    height: 32vw;
+    width: 32vw;
+    position: absolute;
+    border-radius: 50%;
+    background: linear-gradient(to top right, #ff3107, #ff671b);
+    top: 58%;
+    left: 25%;
+    filter: blur(25px);
+    animation-name: animate-shape-page2;
+    animation-duration: 5s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+.shape-4{
+    height: 100%;
+    width: 100%;
+
+}
+
+@keyframes animate-shape-page2 {
+    from{
+        filter: blur(20px);
+        transform: translate(10%, -10%) skew(0);
+    }
+    to{
+        filter: blur(35px);
+        transform: translate(-10%, 10%) skew(-12deg);
+    }
+}
+.page3{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 4vw 0;
+}
+.element{
+    height: 150px;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid #38383864;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding: 0 2vw;
+}
+.element h3{
+    font-size: 3vw;
+    position: relative;
+    z-index: 9;
+}
+.element .overlay{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: -100%;
+    background-color: orange;
+    transition: all ease 0.25s;
+}
+.element:hover .overlay{
+    top:0;
+}
+.fixed-image{
+    height: 30vw;
+    width: 24vw;
+    background-color: red;
+    border-radius: 10px;
+    position: fixed;
+    z-index: 99;
+    left: 50%;
+    top: 25%;
+    display: none;
+    background-size: cover;
+    background-position: center;
+}
+.page4{
+    width: 100%;
+    height: 70vh;
+    background-color: #EFEAE3;
+    padding: 8vw 2vw;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    width: 30%;
+    border-left: 1px solid #aeadad;
+    padding: 0 2vw;
+}
+.page5{
+    width: 100%;
+    height: 100vh;
+}
+footer{
+    position: fixed;
+    z-index: 9;
+    height: 105vh;
+    width: 100%;
+    bottom: 0;
+    background-color: #0b0500;
+    color: #fff;
+    display: flex;
+    /* align-items: flex-end; */
+    justify-content: flex-end;
+    flex-direction: column;
+    padding: 1vw 3vw;
+}
+footer h4{
+    font-size: 23vw;
+}
+footer .important-links{
+    height: 20vh;
+    width: 100%;
+    /* background-color: red; */
+}
+footer .important-links h5{
+    font-size: 2vw;
+}
+footer .footer-end{
+    border-top: 1px solid #dadada;
+    height: 10vh;
+    width: 100%;
 }
