--- a/2k24_Design/Wcrm_login/assets/src/style-main.css
+++ b/2k24_Design/Wcrm_login/assets/src/style-main.css
@@ -1,145 +1,201 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-*{
+* {
     font-family: 'Poppins', sans-serif;
 }
-.wrapper{
+
+.wrapper {
     background: #ececec;
     padding: 0 20px 0 20px;
 }
-.main{
+
+.main .container {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
-.side-image{
+
+.side-image {
     background-image: url("../img/bc.jpg");
-    background-position: center;
+    background-position: right;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     border-radius: 10px 0 0 10px;
     position: relative;
+    min-width: 536px;
+    height: 100%;
+    /* Ensure the side image takes up full height */
 }
-.row{
-  width:  900px;
-  height:550px;
-  border-radius: 10px;
-  background: #fff;
-  padding: 0px;
-  box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.2);
+
+.row {
+    /* height: 100vh; */
+    width: 900px;
+    height: 550px;
+    border-radius: 10px;
+    background: #fff;
+    padding: 0px;
+    box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.2);
 }
-i{
-    font-weight: 400;
-    font-size: 15px;
+
+.left {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    position: relative;
+    padding: 2rem 0 0 2rem;
 }
-.right{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+
+.input-box {
+    width: 330px;
+    position: relative;
+    box-sizing: border-box;
 }
-.input-box{
-  width: 330px;
-  box-sizing: border-box;
+
+.data {
+    line-height: 0.5;
 }
-img{
-    /* mix-blend-mode: multiply; */
-    width: 35px;
-    position: absolute;
-    bottom: 30px;
-    left: 30px;
+
+.collection__data {
+    margin-left: 0.5rem;
 }
-.input-box header{
+
+.company__logo {
+    width: 70px;
+    margin-left: -0.5rem;
+}
+
+.input-box h2 {
+    font-size: 2rem;
+}
+
+.description {
+    font-size: 0.75rem;
+    margin-bottom: 2rem;
+    font-size: 0.65rem;
+}
+
+.input-box header {
     font-weight: 700;
     text-align: center;
     margin-bottom: 45px;
 }
-.input-field{
+
+.input-field {
     display: flex;
     flex-direction: column;
     position: relative;
     padding: 0 10px 0 10px;
 }
-.input{
-    height: 45px;
-    width: 100%;
+
+.input {
+    height: 35px;
+    width: 85%;
     background: transparent;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
     outline: none;
+    border-radius: 10px;
     margin-bottom: 20px;
     color: #40414a;
 }
-.input-box .input-field label{
+
+.input-box .input-field label {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 15px;
+    left: 20px;
+    font-size: 0.8rem;
     pointer-events: none;
     transition: .4s;
 }
-.input-field input:focus ~ label
-   {
-    top: -10px;
+
+.input-field input:focus~label {
+    top: -12px;
     font-size: 13px;
-  }
-  .input-field input:valid ~ label
-  {
-   top: -10px;
-   font-size: 13px;
-   color: #5d5076;
- }
- .input-field .input:focus, .input-field .input:valid{
-    border-bottom: 1px solid #743ae1;
- }
- .submit{
+    color: #743ae1;
+}
+
+.input-field input:valid~label {
+    top: -12px;
+    font-size: 13px;
+    color: #5d5076;
+}
+
+.input-field .input:focus,
+.input-field .input:valid {
+    border: 1px solid #743ae1;
+}
+
+.checks {
+    position: relative;
+    margin: -0.95rem 0.75rem 0.75rem 0.95rem;
+    font-size: 11px;
+    justify-content: space-between;
+}
+
+.forgot_pass {
+    float: right;
+    margin: 0.65rem 2.75rem 0 0.75rem;
+}
+
+.submit {
     border: none;
     outline: none;
-    height: 45px;
-    background: #ececec;
+    height: 35px;
+    width: 85%;
+    color: #fff;
+    background: #743ae1;
     border-radius: 5px;
     transition: .4s;
- }
- .submit:hover{
-    background: rgba(37, 95, 156, 0.937);
+}
+
+.submit:hover {
+    background: #946cdd;
     color: #fff;
- }
- .signin{
+}
+
+.signin {
     text-align: center;
     font-size: small;
     margin-top: 25px;
 }
-span a{
+
+span a {
     text-decoration: none;
     font-weight: 700;
     color: #000;
     transition: .5s;
 }
-span a:hover{
+
+span a:hover {
     text-decoration: underline;
     color: #000;
 }
 
-@media only screen and (max-width: 768px){
-    .side-image{
+.video_cla {
+    width: 300px;
+}
+
+@media only screen and (max-width: 768px) {
+    .side-image {
         border-radius: 10px 10px 0 0;
     }
-    img{
+    img {
         width: 35px;
         position: absolute;
         top: 20px;
         left: 47%;
     }
-    .text{
+    .text {
         position: absolute;
         top: 70%;
         text-align: center;
     }
-    .text p, i{
+    .text p,
+    i {
         font-size: 16px;
     }
-    .row{
-        max-width:420px;
+    .row {
+        max-width: 420px;
         width: 100%;
     }
 }
