--- a/Fontend_WebDevelopment/Level-1/project-2/style.css
+++ b/Fontend_WebDevelopment/Level-1/project-2/style.css
@@ -17,6 +17,10 @@ html,body{
     height: 100%;
     font-family: Helvetica, sans-serif;
 }
+#main{
+    height: 100%;
+    width: 100%;
+}
 header{
     position: fixed;
     display: flex;
@@ -35,7 +39,7 @@ header{
     font-size: 1.25rem;
     font-weight: 600;
 }
-.main-title>h1{
+.intro>h1{
     letter-spacing: -8px;
     font-size: 9rem;
     line-height: 100%;
@@ -63,36 +67,109 @@ header{
     margin-top: 2vw;
     background-image: url(/Fontend_WebDevelopment/Level-1/project-2/img/hero.webp);
     width: 100%;
-    height: 95vh;
+    height: 80%;
     background-position: center;
     background-repeat: no-repear, repeat;
     background-size: cover;
     /* background-attachment: fixed; */
 }
 .about{
-    padding: 4.5vw;
+    width: 100%;
+    height: 50%;
     display: flex;
-    /* background-color: rgb(203, 161, 131); */
     justify-content: space-between;
     align-items: center;
+    padding: 3.4rem;
 }
-.about h3{
-    border-right: 2px solid black;
-    font-size: 5.6rem;
-    letter-spacing: -1.5px;
+.about>h3{
+    padding-right: vw;
     width: 65%;
-    line-height: 90px;
-    background-color: #fff;
     font-weight: 600;
+    font-size: 5.56rem;
+    line-height: 90px;
+    letter-spacing: -2.5px;
+    border-right: 2.5px solid #1e1e21;
 }
 .about-part{
-    width:  33%;
-    background-color: blue;
-    padding:  1.8vw;
+    width: 32%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 .about-part h4{
-    font-size: 2vw;
+    padding: 0;
+    font-size: 33px;
+    font-weight: 600;
+    justify-content: baseline;
+}
+.icons{
+    /* background-color: #1e1e21; */
+  
+}
+.icons i{
+    background-color: #1e1e21;
+    color: #fff;
+    border-radius: 50px;
+    font-size: 1.125vw;
+    margin-left: 8px;
+    padding:  .8rem;
+}
+.work{
+    width: 100%;
+    height: 55%;
+    border-top: 2.5px solid var(--black-color) ;
+    padding: 1.5vw;
+    display: flex;
+}
+.side-title{
+    display: flex;
+    justify-content: space-between;
+    width: 45%;
+    height: 100%;
+}
+.side-title h3 ,i{
+    font-size: 1.75vw;
+    padding: 1.5vw 1vw;
+    font-weight: 500;
+}
+.side-title i {
+    padding-right: 1.5vw;
+    font-weight: 500;
+    font-size: 2.4vw;
+}
+.content-data{
+    width: 50%;
+    width: 100%;
+    padding: 0 2vw;
+    border-left: 2.5px solid var(--black-color);
+}
+.tiles{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 0;
+    width:  100%;
+}
+.tiles:nth-child(1){
+    border-bottom: 2px solid #000;
+}
+.tiles .elements:nth-child(2){
+    width: 50%;
+    height: 100%;
+    padding-left: 60px;
+}
+.tiles .elements:nth-child(1){
+    width: 50%;
+    padding-right: 20px;
+    height: 100%;
+    border-right: 2px solid #000;
+}
+.elements h4{
+    font-size: 2.25vw;
+
+}
+.elements p{
+    font-size: 1.125vw;
+    color: #1e1e21be;
 }
