--- a/Fontend_WebDevelopment/Level-1/project-3/style.css
+++ b/Fontend_WebDevelopment/Level-1/project-3/style.css
@@ -94,9 +94,10 @@ header h2{
 }
 .intro>h1{
     font-weight: 500;
-    letter-spacing: -1.5px;
+    letter-spacing: -9px;
+    word-spacing: 12px;
     line-height: 120px;
-    font-size: 8rem;
+    font-size: 8.5rem;
     padding-bottom: 6vw;
 }
 .Case-studies{
